[package]
name = "tampering_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
